<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/default_color_ffd200"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="@dimen/title_img_width"
            android:layout_height="@dimen/title_img_width"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/xml_back_btn_bg" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/withdrawals_title"
            android:textColor="@color/color_black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tv_withdrawals_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/withdrawals_title_records_text_right_margin"
            android:text="@string/withdrawals_redords"
            android:textColor="@color/color_7c5e03"
            android:textSize="@dimen/withdrawals_title_records_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/default_color_ffd200"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/withdrawals_can_withdrawals_text_top_margin"
            android:text="@string/can_withdrawals_num"
            android:textColor="@color/color_4d3104"
            android:textSize="@dimen/withdrawals_can_withdrawals_text_size" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/withdrawals_can_withdrawals_num_text_top_margin">

            <TextView
                android:id="@+id/tv_withdrawals_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/color_4d3104"
                android:text="0"
                android:textSize="@dimen/withdrawals_can_withdrawals_num_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tv_withdrawals_num"
                android:layout_marginBottom="4dp"
                android:layout_toLeftOf="@id/tv_withdrawals_num"
                android:text="@string/can_withdrawals_yuan"
                android:textColor="@color/color_4d3104"
                android:textSize="@dimen/withdrawals_can_withdrawals_text_size" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/withdrawals_bottom_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/silver_num"
                android:textColor="@color/color_7c5e03"
                android:textSize="@dimen/withdrawals_can_withdrawals_text_size" />

            <TextView
                android:id="@+id/tv_withdrawals_silver_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/color_7c5e03"
                android:textSize="@dimen/withdrawals_can_withdrawals_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ge"
                android:textColor="@color/color_7c5e03"
                android:textSize="@dimen/withdrawals_can_withdrawals_text_size" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/img_withdrawals_bg" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/withdrawals_edit_height"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="17dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdrawals_money"
            android:textColor="@color/color_666666"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@drawable/xml_withdrawals_edit_bg">

            <EditText
                android:id="@+id/et_withdrawal_money"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/please_input_withdrawals_money"
                android:inputType="number"
                android:maxLength="7"
                android:paddingLeft="12dp"
                android:textColorHint="@color/color_cccccc"
                android:textSize="16sp" />

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:text="@string/yuan"
            android:textColor="@color/color_666666"
            android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/need_coin"
            android:textColor="@color/color_666666"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_withdrawals_need_silver_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="0"
            android:textColor="@color/color_cccccc"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_withdrawals"
        android:layout_width="match_parent"
        android:layout_height="@dimen/withdrawals_btn_height"
        android:layout_marginLeft="@dimen/withdrawals_title_records_text_right_margin"
        android:layout_marginRight="@dimen/withdrawals_title_records_text_right_margin"
        android:layout_marginTop="@dimen/withdrawals_btn_top_margin"
        android:background="@drawable/xml_yellow_long_btn_bg"
        android:text="@string/wechat_withdrawals"
        android:textColor="@color/color_4d3104" />

    <TextView
        android:id="@+id/tv_read_withdrawals_doc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/withdrawals_title_records_text_right_margin"
        android:layout_marginTop="@dimen/withdrawals_read_doc_top_margin"
        android:text="@string/read_withdrawals_doc"
        android:textColor="@color/color_7f7f7f"
        android:textSize="@dimen/withdrawals_read_doc_text_size" />

</LinearLayout>