<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_take_photo"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/selector_popup_dialog_top"
                android:text="@string/text_take_photo"
                android:textColor="@color/color_19191a" />

            <Button
                android:id="@+id/btn_select_photo"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/selector_popup_dialog_center"
                android:text="@string/text_select_photo"
                android:textColor="@color/color_19191a" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_below="@+id/btn_take_photo"
            android:layout_marginTop="2dp"
            android:background="@drawable/selector_popup_dialog_bottom"
            android:text="@string/text_cancel"
            android:textColor="@color/color_19191a" />
    </LinearLayout>
</LinearLayout>
