<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fbfbfb"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/layout_title_bar" />

    <EditText
        android:id="@+id/et_autograph"
        android:layout_width="match_parent"
        android:layout_height="@dimen/autograph_edit_height"
        android:layout_marginLeft="@dimen/autograph_edit_left_right_magin"
        android:layout_marginRight="@dimen/autograph_edit_left_right_magin"
        android:layout_marginTop="@dimen/autograph_edit_top_margin"
        android:background="@drawable/xml_suggestion_feedback_edit_bg"
        android:gravity="start"
        android:hint="@string/please_input_autograph"
        android:maxLength="20"
        android:padding="@dimen/autograph_edit_padding"
        android:textColorHint="@color/color_a8a8a9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/autoghtph_text_left_magin"
        android:layout_marginTop="@dimen/autograph_text_top_margin"
        android:text="@string/autograph_limit"
        android:textColor="@color/color_a8a8a9" />

    <Button
        android:id="@+id/btn_autograph_commit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/autograph_btn_height"
        android:layout_marginLeft="@dimen/autograph_edit_left_right_magin"
        android:layout_marginRight="@dimen/autograph_edit_left_right_magin"
        android:layout_marginTop="@dimen/autograph_btn_top_margin"
        android:background="@drawable/xml_yellow_long_btn_bg"
        android:text="@string/commit" />

</LinearLayout>